# gemini-cli-api

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.simple.yaml  pyproject.toml
app/: cli_executor.py  config.py  main.py  models.py
app/routers/: cli.py
scripts/: run.sh  start.sh  stop.sh  test.sh
