[project]
name = "gemini-cli-api"
version = "0.1.0"
description = "FastAPI HTTP wrapper around the gemini CLI command"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.5.0",
    "pydantic>=2.9.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
